--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,6 @@ body {
   font-family: Cuprum;
 }
 
-a {
-  text-decoration: none;
-}
-
 header {
   background-color: #f4f7f9;
   display: flex;
@@ -16,15 +12,12 @@ header {
   align-items: center;
 }
 
-ul {
-  list-style: none;
+a {
+  text-decoration: none;
 }
 
-.header-address {
-  font-family: Cuprum;
-  font-style: normal;
-  width: 270px;
-  height: 68px;
+ul {
+  list-style: none;
 }
 
 .header-top-wrapper {
@@ -32,6 +25,7 @@ ul {
   height: 47px;
   margin: 0 auto;
   padding: 0 10px;
+  background-color: #293449;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -56,14 +50,25 @@ ul {
   line-height: 18px;
 }
 
+.order-interface {
+  width: 940px;
+  height: 42px;
+  background-color: #293449;
+}
+
 .order-interface a {
-  width: 78px;
-  height: 15px;
-  /* color: #ffffff; */
+  width: 150px;
+  height: 42px;
+  background-color: #293449;
+  color: #ffffff;
   font-family: Cuprum;
   font-size: 17px;
   font-weight: 400;
   line-height: 18px;
+}
+
+.order-interface a:hover {
+  background-color: #212a3a;
 }
 
 .header-middle-wrapper {
@@ -77,7 +82,6 @@ ul {
   justify-content: space-between;
 }
 
-
 .site-label {
   width: 196px;
   height: 60px;
@@ -86,6 +90,13 @@ ul {
   font-size: 16px;
   font-style: italic;
   line-height: 23px;
+}
+
+.header-address {
+  font-family: Cuprum;
+  font-style: normal;
+  width: 270px;
+  height: 68px;
 }
 
 .phone {
@@ -148,32 +159,37 @@ ul {
   width: 940px;
   height: 60px;
   box-shadow: inset 0 -5px 0 #293449;
-  /* background-color: #32425c; */
+  background-color: #32425c;
 }
 
-.main-navigation,
-.user-navigation,
 .order-interface {
-  list-style: none;
-}
-
-
-
-.order-interface {
-  width: 433px;
+  width: 150px;
+  height: 42px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.bookmarks,
-.cart,
-.order-button {
-  width: 150px;
-  height: 42px;
+.bookmarks a,
+.cart a,
+.order-button a {
+width: 150px;
+height: 42px;
+background-color: #293449;
 }
 
+.bookmarks a:hover,
+.cart a:hover,
+.order-button a:hover {
+  background-color: #293449;
+}
 
+.bookmarks a:active,
+.cart a:active,
+.order-button a:active {
+  background-color: #1d2739;
+  opacity: 0.5;
+}
 
 .user-navigation {
   display: flex;
@@ -184,12 +200,17 @@ ul {
 .main-navigation {
   width: 940px;
   height: 60px;
-  margin-bottom: 60px;
   box-shadow: inset 0 -5px 0 #293449;
   background-color: #32425c;
 }
 
 .site-navigation {
+  margin: 0;
+  padding: 0;
+  width: 940px;
+  height: 60px;
+  box-shadow: inset 0 -5px 0 #293449;
+  background-color: #32425c;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -197,8 +218,7 @@ ul {
 }
 
 .site-navigation a {
-  width: 52px;
-  height: 12px;
+  padding: 22px 31px 31px 26px;
   color: #ffffff;
   font-family: Cuprum;
   font-size: 17px;
@@ -206,12 +226,11 @@ ul {
   line-height: 17px;
 }
 
-.order-interface a {
-  width: 78px;
-  height: 15px;
-  /* color: #ffffff; */
-  font-family: Cuprum;
-  font-size: 17px;
-  font-weight: 400;
-  line-height: 18px;
+.site-navigation a:hover {
+  background-color: #293449;
+}
+
+.site-navigation a:active {
+  background-color: #1d2739;
+  opacity: 0.5;
 }
