--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
 
 header {
   background-color: #f4f7f9;
+  margin-bottom: 59px;
 }
 
 a {
@@ -15,4 +16,157 @@ a {
 
 ul {
   list-style: none;
+}
+
+h1 {
+  width: 196px;
+  text-align: left;
+  letter-spacing: normal;
+  color: #ee3643;
+  font-size: 16px;
+  font-weight: normal;
+  font-style: italic;
+  font-stretch: normal;
+  line-height: 1.44;
+}
+
+.header-top-wrapper,
+.header-middle-wrapper,
+.main-navigation {
+  width: 940px;
+  margin: 0 auto;
+}
+
+.header-logo {
+  width: 220px;
+  height: 47px;
+}
+
+.header-top-wrapper {
+  width: 100%;
+  margin-bottom: 46px;
+  background-color: #293449;
+  display: flex;
+  justify-content: space-between;
+}
+
+.order-interface {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 450px;
+}
+
+.order-interface a {
+  width: 108px;
+  height: 15px;
+  font-size: 17px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.06;
+  letter-spacing: normal;
+  text-align: left;
+  color: #ffffff;
+}
+
+.order-interface a:hover {
+  background-color: #32425c;
+}
+
+.order-interface a:active {
+  background-color: #1d2739;
+  opacity: 0.5;
+}
+
+.header-middle-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.phone {
+  width: 144px;
+  padding-top: 10px;
+  padding-right: 49px;
+  padding-bottom: 8px;
+  padding-left: 71px;
+  text-align: left;
+  letter-spacing: normal;
+  color: #ee3643;
+  border: solid 3px #ffffff;
+  font-size: 21px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1;
+}
+
+.place {
+  width: 250px;
+  margin: auto;
+  text-align: center;
+  letter-spacing: normal;
+  color: #32425c;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.71;
+}
+
+.user-navigation {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.login-link {
+  width: 121px;
+  margin-top: auto;
+  margin-right: 10px;
+  margin-bottom: auto;
+  margin-left: auto;
+  background-color: #ffffff;
+}
+
+.registration {
+  width: 121px;
+  margin-top: auto;
+  margin-right: auto;
+  margin-bottom: auto;
+  margin-left: 10px;
+  background-color: #ffffff;
+}
+
+.site-navigation {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 940px;
+  margin: 0;
+  padding: 0;
+  background-color: #32425c;
+  box-shadow: inset 0px -5px 0 0 #293449;
+}
+
+.site-navigation a {
+  width: 52px;
+  text-align: left;
+  letter-spacing: normal;
+  color: #ffffff;
+  font-size: 17px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1;
+}
+
+.site-navigation a:hover {
+  background-color: #32425c;
+}
+
+.site-navigation a:active {
+  background-color: #1d2739;
+  opacity: 0.5;
 }
