--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* @group global */
 body {
   background-color: #fff;
   font-family: Cuprum
@@ -11,47 +12,9 @@ img {
   max-width: 100%;
   height: auto
 }
+/* @end global */
 
-.header-top-wrapper {
-  background-color: #293449
-}
-
-.container, .container-flex {
-  width: 940px;
-  margin: 0 auto;
-  padding: 0;
-  border: 0
-}
-
-.container-flex {
-  display: flex;
-  align-items: center;
-  justify-content: space-between
-}
-
-.header-logo {
-  margin-bottom: -5px
-}
-
-.main-logo {
-  width: 220px;
-  height: 47px;
-  box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.24);
-  background-color: #ee3643;
-  fill: #fff;
-}
-
-.logo-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.header-logo a {
-  width: 220px;
-  height: 47px;
-}
-
+/* @group visually-hidden */
 .visually-hidden {
   position: absolute;
   overflow: hidden;
@@ -63,6 +26,49 @@ img {
   white-space: nowrap;
   border: 0;
   clip-path: inset(100%)
+}
+/* @end visually-hidden */
+
+/* @group center container */
+.container {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0;
+  border: 0
+}
+
+.container-flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between
+}
+/* @end center container */
+
+/* @group header first line */
+.header-top-wrapper {
+  background-color: #293449
+}
+
+.header-logo {
+  margin-bottom: -3px;
+  width: 220px;
+  height: 47px;
+}
+
+.main-logo {
+  box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.24);
+  background-color: #ee3643;
+  fill: #fff;
+  padding-top: 13px;
+  padding-bottom: 15px;
+  padding-left: 55px;
+  padding-right: 56px;
+}
+
+.logo-link {
+  display: block;
+  margin: 0;
+  padding: 0;
 }
 
 .header-logo a:hover .main-logo {
@@ -79,7 +85,7 @@ img {
   height: 42px
 }
 
-.search-form p, body {
+.search-form p {
   margin: 0;
   padding: 0
 }
@@ -188,7 +194,9 @@ img {
   opacity: .5;
   background-color: #518534
 }
+/* @end header first line */
 
+/* @group header second line */
 .header-middle-wrapper {
   background-color: #f4f7f9
 }
@@ -196,7 +204,10 @@ img {
 .site-label {
   width: 196px;
   height: 60px;
-  margin: 45px 71px 44px 0;
+  margin-top: 45px;
+  margin-bottom: 44px;
+  margin-left: 44px;
+  margin-right: 71px;
   padding: 0;
   text-align: left;
   letter-spacing: normal;
@@ -310,7 +321,9 @@ img {
 .login-link a:active, .registration a:active {
   opacity: .3
 }
+/* @end header second line */
 
+/* @group main navigation */
 .main-navigation, .site-navigation {
   display: flex;
   align-items: center;
@@ -354,8 +367,422 @@ img {
   opacity: .5;
   background-color: #1d2739
 }
+/* @end main navigation */
 
-.logo {
+/* @group first section */
+.category-interface {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.category-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+}
+
+.catalog-list {
+  width: 620px;
+  height: 266px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+}
+
+.category-item-materials {
+  width: 300px;
+  height: 123px;
+  background-color: #ffbf47;
+  position: relative;
+}
+
+.category-item-materials::before {
+  content: "";
+  position: absolute;
+  top: 31px;
+  left: 213px;
+  width: 44px;
+  height: 65px;
+  background-image: url("../img/paint.svg");
+}
+
+.category-item-materials::after {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 240px;
+  width: 60px;
+  height: 59px;
+  background-image: url("../img/new-flag.png");
+}
+
+.category-item-instruments {
+  width: 300px;
+  height: 123px;
+  background-color: #3bbce3;
+  position: relative;
+}
+
+.category-item-instruments::before {
+  content: "";
+  position: absolute;
+  top: 31px;
+  left: 197px;
+  width: 75px;
+  height: 61px;
+  background-image: url("../img/drill.svg");
+}
+
+.category-item-tehnic {
+  width: 300px;
+  height: 123px;
+  background-color: #dc91d8;
+  position: relative;
+}
+
+.category-item-tehnic::before {
+  content: "";
+  position: absolute;
+  top: 31px;
+  left: 191px;
+  width: 78px;
+  height: 62px;
+  background-image: url("../img/tractor.svg");
+}
+
+.category-item-discount {
+  width: 300px;
+  height: 123px;
+  background-color: #8ed78f;
+  position: relative;
+}
+
+.category-item-discount::before {
+  content: "";
+  position: absolute;
+  top: 31px;
+  left: 191px;
+  width: 78px;
+  height: 62px;
+  background-image: url("../img/shoppingcart.svg");
+}
+
+.category-item-delivery {
+  width: 300px;
+  height: 123px;
+  background-color: #ffbf47;
+  position: relative;
+}
+
+.category-item-delivery::before {
+  content: "";
+  position: absolute;
+  top: 31px;
+  left: 191px;
+  width: 78px;
+  height: 63px;
+  background-image: url("../img/delivery.svg");
+}
+
+.category-item-materials p,
+.category-item-instruments p,
+.category-item-tehnic p,
+.category-item-discount p,
+.category-item-delivery p {
+  font-size: 24px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.25;
+  letter-spacing: normal;
+  text-align: left;
+  color: #ffffff;
+  margin-left: 25px;
+}
+
+.category-item-materials a,
+.category-item-instruments a,
+.category-item-tehnic a,
+.category-item-discount a,
+.category-item-delivery a {
+  font-size: 14px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.25;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
+  width: 135px;
+  background-color: rgba(0, 0, 0, 0.1);
+  text-transform: uppercase;
+  border-radius: 2px;
+  display: block;
+  margin-left: 25px;
+  padding-top: 14px;
+  padding-bottom: 14px;
+}
+/* @end first section */
+
+/* @group second section */
+.popular-items,
+.popular,
+.popular-goods-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0;
+}
+
+.popular {
+  width: 940px;
+  height: 89px;
+  margin-bottom: 21px;
+  background-color: rgb(249, 245, 240);
+}
+
+.popular h2 {
+  font-size: 30px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  text-align: left;
+  color: rgb(50, 66, 92);
+  text-transform: uppercase;
+  margin-left: 30px;
+}
+
+.popular a {
+  font-size: 14px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.25;
+  letter-spacing: normal;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  display: block;
+  background-color: rgb(238, 54, 67);
+  padding-top: 14px;
+  padding-bottom: 14px;
+  padding-left: 55px;
+  padding-right: 55px;
+  margin-right: 24px;
+  border-radius: 3px;
+}
+
+.popular-goods-list li {
+  width: 220px;
+  height: 318px;
+  border: solid 1px rgb(234, 234, 234);
+  background-color: rgb(255, 255, 255);
+  list-style: none;
+}
+
+.catalog-items {
+  width: 700px;
+  margin: 20px auto;
+}
+
+.catalog-item {
+  position: relative;
+  display: inline-block;
+  width: 218px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  line-height: 20px;
+  font-weight: bold;
+  text-align: center;
+  border: 1px solid #ccc;
+}
+
+.catalog-item .flag {
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  width: 60px;
+  height: 60px;
+  text-indent: -1000px;
+  overflow: hidden;
+  z-index: 20;
+}
+
+.catalog-item:last-child .flag-new {
+  background: url("../img/new-flag.png") no-repeat 0 0;
+}
+
+.catalog-item .actions {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 218px;
+  height: 88px;
+  padding: 40px 0;
+
+  background-color: rgba(255,255,255,0.9);
+  z-index: 10;
+}
+
+.catalog-item .image {
+  width: 218px;
+  height: 168px;
+}
+
+.catalog-item .title {
+  min-height: 40px;
+  padding: 0 25px;
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+
+.catalog-item .discount {
+  min-height: 20px;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  color: #999;
+  text-decoration: line-through;
+}
+
+.catalog-item .price {
+  position: relative;
+  width: 80px;
+  margin: 10px auto;
+  margin-bottom: 20px;
+  padding: 10px 30px;
+  color: white;
+  background: #ee3643;
+  border-radius: 3px;
+}
+
+.catalog-item .price:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: -20px;
+  width: 0;
+  height: 0;
+  border: 20px solid white;
+  border-left-color: #ee3643;
+}
+
+.title {
+  font-size: 18px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.11;
+  letter-spacing: normal;
+  text-align: center;
+  color: rgb(0, 0, 0);
+}
+
+.price a {
+  font-size: 17.5px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  text-align: center;
+  color: rgb(255, 255, 255);
+}
+
+.catalog-item .actions .buy a {
+  display: block;
+  width: 129px;
+  margin: 0 auto;
+  margin-bottom: 7px;
+  padding: 7px 0;
+  background-color: #63a63e;
+  border: 3px solid #63a63e;
+  border-bottom-color: #367315;
+  border-radius:3px;
+  color: white;
+  font-size: 14px;
+  font-weight: normal;
+  font-family: "Cuprum", sans-serif;
+  line-height: 18px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.catalog-item .actions .bookmark a {
+  display: block;
+  width: 129px;
+  margin: 0 auto;
+  margin-bottom: 7px;
+  padding: 7px 0;
+  border: solid 3px rgb(99, 166, 62);
+  border-radius:3px;
+  color: rgb(50, 66, 92);
+  font-size: 14px;
+  font-weight: normal;
+  font-family: "Cuprum", sans-serif;
+  line-height: 18px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.catalog-item .actions .bookmark {
+  color: #32425c;
+  background: white;
+  border-bottom-color: #63a63e;
+}
+
+.catalog-item .actions {
+  display: none;
+}
+
+.catalog-item:hover .actions {
+  display: block;
+}
+
+.catalog-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.catalog-items {
+  font-size: 0;
+}
+
+.catalog-item {
+  font-size: 16px;
+}
+
+.buy a:hover {
+  background-color: rgb(95, 187, 45);
+}
+
+.buy a:active {
+  background-color: rgb(81, 133, 52);
+}
+
+.buy-link {
+  position: relative;
+}
+
+.buy-link::before {
+  content: "";
+  position: absolute;
+  background-color: red;
+  /* background-image: url("img/icon-cart.svg"); */
+}
+/* @end second section */
+
+
+
+/* .logo {
   width: 220px;
   height: 68px;
   background-color: #ee3643;
@@ -916,9 +1343,17 @@ img {
   background: transparent;
 }
 
-.logo {
+.logo-container {
   width: 220px;
   height: 68px;
-  box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.24);
-  background-color: #ee3643;
-  fill: #fff;
+}
+
+.logo {
+    box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.24);
+    background-color: #ee3643;
+    fill: #fff;
+    padding-top: 13px;
+    padding-bottom: 15px;
+    padding-left: 55px;
+    padding-right: 56px;
+  } */
